--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,8 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.feriavirtualapp"
-        minSdkVersion 23
+        minSdkVersion 22
         targetSdkVersion 28
-        manifestPlaceholders = [ auth0Domain: "dev-5f39w36l.auth0.com" , auth0Scheme : "https" ]
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -17,14 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.auth0.android:lock:2.15.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.volley:volley:1.1.1'
 }
