comunicacion api asp.net y despliegue de proceso de venta , validacion de usuario.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             android:parentActivityName=".LoginActivity"/>
         <activity android:name=".ProcesoVentaActivity"
             android:label="Proceso Venta" />
+        <activity android:name=".MisDatos"
+            android:label="Mis Datos"/>
     </application>
 
 </manifest>
